# token-hawk

./: .gitmodules  LICENSE  README.md  th-llama-loader.cpp  th-llama-loader.hpp  th-llama.cpp  th-llama.hpp  th.cpp  th.hpp
cli/: CMakeLists.txt  README.md  main.cpp
llama-cpp/: ggml.c  llama.cpp  llama.h
llama.cpp/: README.md  ggml.h  llama.cpp  llama_utils.cpp
web/: Makefile  README.md  build-demo.py  capi.h  capi.js  chat.js  fileReaderWorker.js  index.html  main.cpp  model-load.cpp  model-load.hpp  serve.py  style.css
